# Diffusion

./: .gitignore  LICENSE  README.md  pyproject.toml
diff/: models.py  noise_scheduler.py
diffuse/: diffusion_utilities.py  models.py  noise_scheduler.py  positional_embeddings.py  train.py  utils.py
diffuse/models/: context_unet.py  mlp2d.py  models.py  unet.py  unet1.py  unet2.py
notebooks/: dev.ipynb  image.ipynb  noise_sched.ipynb  simple_2d.ipynb  sprites.ipynb  train.ipynb  train2.ipynb
tests/: test_noise_scheduler.py
