[tool.poetry]
name = "diffuse"
version = "0.1.0"
description = ""
authors = ["Erik Gafni <egafni@gmail.com>"]
readme = "README.md"
packages = [{include = "diffuse"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.2"
matplotlib = "^3.8.4"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
numpy = "^1.26.4"
einops = "^0.7.0"
datasets = "^2.18.0"
torchvision = "^0.17.2"
jaxtyping = "^0.2.28"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.1.6"
pytest = "^8.1.1"
jupyter = "^1.0.0"
black = "^24.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
